--- a/main/index.html
+++ b/main/index.html
@@ -7,12 +7,12 @@
 </head>
 <body>
   <header>
-    <img id="profile" src="images/scripted_logo_orange.png">
-    <h1>ScriptEd's Portfolio</h1>
+    <img id="profile" src="../images/profile.jpg">
+    <h1>Simon's Portfolio</h1>
     <ul>
       <li><a class="nav" href="">Home</a></li>
-      <li><a class="nav" href="">About</a></li>
-      <li><a class="nav" href="">Contact</a></li>
+      <li><a class="nav" href="../linked/about.html">About</a></li>
+      <li><a class="nav" href="../linked/contact.html">Contact</a></li>
     </ul>
   </header>
   <div class="project">
